Add custom Module::Build subclass to build libjit.
It's an almost verbatim copy from https://github.com/tsee/jit-experiments.git,
by Steffen Mueller and Nick Perez,

--- a/dist.ini
+++ b/dist.ini
@@ -7,7 +7,7 @@ copyright_year   = 2013
 
 [@Basic]
 [ModuleBuild]
-mb_class = Module::Build::WithXSpp
+mb_class = Module::Build::LibJIT
 [NextRelease]
 [OurPkgVersion]
 [@Git]
