Disable Makefile.PL creation.

--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,9 @@ license = Perl_5
 copyright_holder = Mattia Barbon
 copyright_year   = 2013
 
-[@Basic]
+[@Filter]
+-bundle = @Basic
+-remove = MakeMaker
 [ModuleBuild]
 mb_class = Module::Build::LibJIT
 [NextRelease]
