--- a/dist.ini
+++ b/dist.ini
@@ -5,6 +5,13 @@ license = Perl_5
 copyright_holder = Mattia Barbon
 copyright_year   = 2013
 
+[Prereqs / BuildRequires]
+ExtUtils::XSpp = 0.1701
+
+[Prereqs / TestRequires]
+B::Generate             = 1.37
+B::Replace              = 0.01
+
 [@Filter]
 -bundle = @Basic
 -remove = MakeMaker
