Fix required EU::XS++ version.

--- a/dist.ini
+++ b/dist.ini
@@ -7,7 +7,7 @@ copyright_holder = Mattia Barbon
 copyright_year   = 2013
 
 [Prereqs / BuildRequires]
-ExtUtils::XSpp = 0.1701
+ExtUtils::XSpp = 0.17_01
 Alien::LibJIT = 0.01
 
 [Prereqs / TestRequires]
