Use Alien::LibJIT to avoid having two modules with a libjit

--- a/dist.ini
+++ b/dist.ini
@@ -1,12 +1,14 @@
 name    = LibJIT
 version = 0.01
 author  = Mattia Barbon <mattia@barbon.org>
+author  = Steffen Mueller <smueller@cpan.org>
 license = Perl_5
 copyright_holder = Mattia Barbon
 copyright_year   = 2013
 
 [Prereqs / BuildRequires]
-ExtUtils::XSpp = 0.17_01
+ExtUtils::XSpp = 0.1701
+Alien::LibJIT = 0.01
 
 [Prereqs / TestRequires]
 B::Generate             = 1.37
